--- a/typescript-jest/package.json
+++ b/typescript-jest/package.json
@@ -5,6 +5,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^15.6.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
+  },
+  "scripts": {
+    "dev": "ts-node src/index.ts",
+    "dev:watch": "ts-node-dev --respawn src/index.ts"
   }
 }
