--- a/typescript-jest/package.json
+++ b/typescript-jest/package.json
@@ -5,11 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^15.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.27.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "dev:watch": "ts-node-dev --respawn src/index.ts"
+    "dev:watch": "ts-node-dev --respawn src/index.ts",
+    "lint": "eslint --ext .js,.ts ./src"
   }
 }
