--- a/typescript-jest/package.json
+++ b/typescript-jest/package.json
@@ -17,6 +17,8 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "dev:watch": "ts-node-dev --respawn src/index.ts",
-    "lint": "eslint --ext .js,.ts ./src"
+    "lint": "eslint --ext .js,.ts ./src",
+    "lint:test": "eslint --ext .js,.ts ./test",
+    "test": "jest"
   }
 }
