--- a/template-typescript-jest/package.json
+++ b/template-typescript-jest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-jest",
+  "name": "template-typescript-jest",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
